--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Fint the Neighbors</title>
+    <title>Find the Neighbors</title>
     <script type="module" src="/src/main.tsx" defer></script>
 </head>
 
